--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "dotenv": "^16.3.1",
+    "google-spreadsheet": "^4.1.1",
     "googleapis": "^129.0.0",
     "joi": "^17.11.0",
     "pg": "^8.11.3",
