--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^129.0.0",
